# cfresolve

./: .gitignore  pyproject.toml
assets/: domains.csv
src/cfresolve/: __init__.py  __main__.py  cli.py  exceptions.py
